[package]
name = "sneed"
version = "0.0.2"
authors = ["Ash Manning <10554686+A-Manning@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.74.1"
description = "A safe wrapper around heed, with better errors and observability"
readme = "README.md"
repository = "https://github.com/A-Manning/sneed"
license = "Apache-2.0"
keywords = ["database", "heed", "lmdb", "storage", "typed"]
categories = ["database", "data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
educe = { version = "0.6.0", default-features = false, features = ["Clone", "Debug"]}
# Needed due to transitive dependency via educe
enum-ordinalize = { version = "4.2.1", default-features = false }
fallible-iterator = "0.3"
generativity = "1.1.0"
heed = { version = "0.20.3", default-features = false }
hex = "0.3"
strum = { version = "0.20", features = ["derive"]}
# Needed due to transitive dependency via heed
syn = { version = "1.0.1", default-features = false }
thiserror = "1.0.41"

[dependencies.tokio]
version = "1.37.0"
default-features = false
features = ["sync"]
optional = true

[features]
observe = ["dep:tokio"]

[lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"
print_stdout = "deny"
print_stderr = "deny"

[lints.rust]
let_underscore_drop = "deny"